Homepage with autocomplete

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -29,7 +29,7 @@ pt: Portuguese
 pt_BR: Portuguese (Brazil)
 # Homepage
 homepage.message: Discover beauties and mysteries of the universe
-home.search.placeholder: Research in the catalog...
+home.search.placeholder: Search in catalogs...
 dayImage: Image of the day
 # View full
 info: Informations
