--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -29,7 +29,7 @@ pt: Portugais
 pt_br: Portugais (Brésil)
 # Homepage
 homepage.message: Découvrez les beautés et les mystères de l'univers
-home.search.placeholder: Rechercher dans le catalogue...
+home.search.placeholder: Rechercher dans les catalogues...
 dayImage: L'image du jour
 # View full
 info: Informations
