--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -9,6 +9,7 @@ hem.zo: Zodiac
 hem.no: Northern hemisphere
 hem.su: Southern hemisphere
 #Catalog
+catalog: Catalog
 catalogs: Catalogs
 allCatalog: All catalogs
 catalog.messier: Messier's catalog
@@ -33,8 +34,10 @@ home.search.placeholder: Search in catalogs...
 dayImage: Image of the day
 # View full
 info: Informations
+desigs: Other designations
 magnitude: Apparent magnitude
 const_id: Constellation|Constellations
+constId: Constellation|Constellations
 dim: Size
 dimExp: Angular dimensions in arcminutes
 distAl: Distance (year-light)
@@ -45,6 +48,8 @@ typeImgGall: Objects of type "%type%"
 mag: Magnitude
 ra: Right ascension
 dec: Declination
+discover: Discover
+discoverYear: Year
 # Vue list
 filteringList: Filter list items by constellation, type and magnitude...and discover most beautiful celestial objects.
 list.messier: List of Messier objects
