Dso : add title formated + fix translations + vue.js

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,5 +1,5 @@
 # Layout
-dso: Deep space objects
+dso: Deep-sky objects
 menu.homepage: Homepage
 selectLang: Languages
 astrobin.message: This product uses the AstroBin API but is not endorsed or certified by AstroBin.
