--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,5 +1,6 @@
 # Layout
-dso: Deep space objects
+dso: Deep-sky objects
+dso_tr: Objets du ciel profond
 menu.homepage: Accueil
 selectLang: Langues
 astrobin.message: This product uses the AstroBin API but is not endorsed or certified by AstroBin.
