--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -8,6 +8,8 @@ more: More informations
 hem.zo: Zodiac
 hem.no: Northern hemisphere
 hem.su: Southern hemisphere
+about:
+about.us: About us
 #Catalog
 catalog: Catalog
 catalogs: Catalogs
