--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -9,6 +9,7 @@ more: Plus d'informations
 hem.zo: Zodiaque
 hem.no: Hémisphère nord
 hem.su: Hémisphère sud
+about.us: À propos
 #Catalog
 catalog: Catalogue
 catalogs: Catalogues
