--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -9,6 +9,7 @@ more: Mais informações
 hem.zo: Zodíaco
 hem.no: Hemisfério Norte
 hem.su: Hemisfério sul
+about.us:
 #Catalog
 catalog: Catálogo
 catalogs: Catálogos
