Transform header into VueJs component

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -30,6 +30,8 @@ fr: French
 en: English (UK)
 pt: Portuguese
 pt_BR: Portuguese (Brazil)
+es: Spanish
+de: German
 # Homepage
 homepage.message: Discover beauties and mysteries of the universe
 home.search.placeholder: Search in catalogs...
