--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -30,6 +30,8 @@ fr: Français
 en: Anglais (UK)
 pt: Portugais
 pt_br: Portugais (Brésil)
+es: Espagnol
+de: Allemand
 # Homepage
 homepage.message: Découvrez les beautés et les mystères de l'univers
 home.search.placeholder: Rechercher dans les catalogues...
