--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -30,6 +30,8 @@ fr: Francês
 en: Inglês (UK)
 pt: Português
 pt_BR: Português (BR)
+es: Espanhol
+de: Alemão
 # Homepage
 homepage.message: Descobre belezas e mistérios do universo
 home.search.placeholder: Procurar no catálogo
