Test header DSO page

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -29,7 +29,7 @@ catalog.dodz: Catalogue Dolidze-Dzimselejvili
 fr: Français
 en: Anglais (UK)
 pt: Portugais
-pt_br: Portugais (Brésil)
+pt_BR: Portugais (Brésil)
 es: Espagnol
 de: Allemand
 # Homepage
