--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -25,6 +25,7 @@ catalog.rcw: Catalogue RCW
 catalog.abl: Catalogue Abell
 catalog.ugc: Catalogue général d'Uppsala
 catalog.dodz: Catalogue Dolidze-Dzimselejvili
+catalog.unassigned: Non assigné
 # Lang:
 fr: Français
 en: Anglais (UK)
