--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -25,6 +25,7 @@ catalog.rcw: RCW Catalog
 catalog.abl: Catalogue Abell
 catalog.ugc: Uppsala General Catalog
 catalog.dodz: Dolidze-Dzimselejvil catalog
+catalog.unassigned: Unassigned
 # Lang:
 fr: Francês
 en: Inglês (UK)
