--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -100,6 +100,7 @@ type.oc: Amas ouvert
 type.gc: Amas globulaire
 type.en: Nébuleuse en émission
 type.bn: Nébuleuse brillante générique
+type.bpn: Nébuleuse bipolaire
 type.sfr: Nébuleuse diffuse
 type.rn: Nébuleuse par réflexion
 type.pn: Nébuleuse planétaire
