--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -18,13 +18,16 @@ catalog.messier: Messier Catalog
 catalog.ngc: New General Catalog
 catalog.ic: Index Catalog
 catalog.ldn: Lynds' Catalogue of Dark Nebulae
-catalog.sh: Sharpless catalog
-catalog.cr: Collinder catalog
+catalog.lbn: Lynds' Catalogue of Bright Nebulae
+catalog.sh: Catálogo Sharpless
+catalog.cr: Catálogo Collinder
 catalog.sto : Stock open clusters
 catalog.rcw: RCW Catalog
-catalog.abl: Catalogue Abell
+catalog.abl: Catálogo Abell
 catalog.ugc: Uppsala General Catalog
 catalog.dodz: Dolidze-Dzimselejvil catalog
+catalog.pgc: Catálogo of Principal Galaxies
+catalog.cld: Catálogo Caldwell
 catalog.unassigned: Unassigned
 # Lang:
 fr: Francês
@@ -65,6 +68,8 @@ list.ic: Index Catalog
 description.ic:
 list.ldn: Lynds' Catalogue of Dark Nebulae
 description.ldn:
+list.lbn: Lynds' Catalogue of Bright Nebulae
+description.lbn:
 list.sh: Sharpless catalog
 description.sh:
 list.cr: Collinder catalog
@@ -77,6 +82,8 @@ list.abl: Abell catalog
 description.abl:
 list.ugc: Uppsala General Catalog
 description.ugc:
+list.cld: Catálogo Caldwell
+description.cld:
 list.dodz: Dolidze-Dzimselejvil catalog
 description.dodz:
 listOrderAsc: Ordem crescente
