--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -113,6 +113,7 @@ type.snr: Supernova remnant
 type.dn:  Dark nebula grey
 type.pos: Asterism
 type.sc: Star clusters
+type.vn: Nebulosa variable
 # Constellations
 const_id.unassigned: Unassigned
 const_id.and: Andromeda
