Remove unused files, clean .env, add MailHelper, add contact form

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -259,6 +259,7 @@ contact.form.email: "Adresse email (*)"
 contact.form.confirm_email: "Confirmation email (*)"
 contact.placeholder.email: "Veuillez renseignez votre email (ex: email@email.com)"
 contact.form.country: "Pays (*)"
+contact.placeholder.contry: ""
 contact.form.message: "Message (*)"
 contact.form.submit: "Envoyer"
 contact.mandatory: "(*) Tous les champs sont obligatoire"
