--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -3,3 +3,4 @@ contact.constraint.email: Email is not correct
 contact.constraint.country: Pick a country
 contact.constraint.invalid_form: The form is invalid
 contact.constraint.topic: Please, select a topic
+form.constraint.recaptchat: Recaptcha invalid
