--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -3,3 +3,4 @@ contact.constraint.email: Veuillez saisir une adresse email correcte
 contact.constraint.country: Veuillez saisir un pays
 contact.constraint.invalid_form: Le formulaire n'est pas valide
 contact.constraint.topic: Veuillez sélectionner un sujet
+form.constraint.recaptchat: Recaptcha invalide
