--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -260,6 +260,11 @@ contact.form.email: "Email (*)"
 contact.form.confirm_email: "Email confirmation (*)"
 contact.placeholder.email: "Please enter your email (e.g: email@email.com)"
 contact.form.country: "Country (*)"
+contact.form.topic: "Topic (*)"
+contact.option.contact: "Contact webmaster"
+contact.option.astrobin: "Propose an astrobin Image"
+contact.option.data: "Propose new data / edit date"
+contact.option.other: "Other"
 contact.form.message: "Message (*)"
 contact.form.submit: "Submit"
 contact.mandatory: "(*) All fields are mandatory"
