Form contact : test display radio button

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -263,7 +263,7 @@ contact.form.country: "Country (*)"
 contact.form.topic: "Topic (*)"
 contact.option.contact: "Contact webmaster"
 contact.option.astrobin: "Propose an astrobin Image"
-contact.option.data: "Propose new data / edit date"
+contact.option.data: "Propose new data / edit data"
 contact.option.other: "Other"
 contact.form.message: "Message (*)"
 contact.form.submit: "Submit"
