Add intl component + form

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -260,6 +260,7 @@ contact.form.email: "Email (*)"
 contact.form.confirm_email: "Email confirmation (*)"
 contact.placeholder.email: "Please enter your email (e.g: email@email.com)"
 contact.form.country: "Country (*)"
+contact.placeholder.country: "Select a coutry"
 contact.form.topic: "Topic (*)"
 contact.option.contact: "Contact webmaster"
 contact.option.astrobin: "Propose an astrobin Image"
