Fix problem with Locale + fix display default image

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -43,6 +43,7 @@ home.search.placeholder: Rechercher dans les catalogues...
 dayImage: L'image du jour
 # View full
 info: Informations
+desigs: Autres désignations
 magnitude: Magnitude apparente
 const_id: Constellation|Constellations
 constId: Constellation|Constellations
