Fix translation form

--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -244,11 +244,25 @@ select:
         label: Ordenar por
         placeholder: Escolha sua opção
 # Form contact
-contact.form.firstname: Prénom (*)
-contact.placeholder.firstname: Veuillez renseignez votre prénom
-contact.form.lastname:
-contact.placeholder.lastname:
-contact.form.email:
-contact.placeholder.email:
-contact.form.country:
-contact.form.message:
+contact.title: "Contact us"
+form.error.sending: "A problem has occurred, please try later"
+form.ok.sending: "Message sended"
+form.error.message: "Please fix errors below"
+contact.form.firstname: "Firstname (*)"
+contact.placeholder.firstname: "Please enter your firstname"
+contact.form.lastname: "Lastname (*)"
+contact.placeholder.lastname: "Please enter your lastname"
+contact.form.email: "Email (*)"
+contact.form.confirm_email: "Email confirmation (*)"
+contact.placeholder.email: "Please enter your email (e.g: email@email.com)"
+contact.form.country: "Country (*)"
+contact.placeholder.country: "Select a country"
+contact.form.topic: "Topic (*)"
+contact.option.contact: "Contact webmaster"
+contact.option.astrobin: "Propose an astrobin Image"
+contact.option.data: "Propose new data / edit data"
+contact.option.language: "Propose new language / edit a language"
+contact.option.other: "Other"
+contact.form.message: "Message (*)"
+contact.form.submit: "Submit"
+contact.mandatory: "(*) All fields are mandatory"
