--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -260,11 +260,12 @@ contact.form.email: "Email (*)"
 contact.form.confirm_email: "Email confirmation (*)"
 contact.placeholder.email: "Please enter your email (e.g: email@email.com)"
 contact.form.country: "Country (*)"
-contact.placeholder.country: "Select a coutry"
+contact.placeholder.country: "Select a country"
 contact.form.topic: "Topic (*)"
 contact.option.contact: "Contact webmaster"
 contact.option.astrobin: "Propose an astrobin Image"
 contact.option.data: "Propose new data / edit data"
+contact.option.language: "Propose new language / edit a language"
 contact.option.other: "Other"
 contact.form.message: "Message (*)"
 contact.form.submit: "Submit"
