--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -260,7 +260,13 @@ contact.form.email: "Adresse email (*)"
 contact.form.confirm_email: "Confirmation email (*)"
 contact.placeholder.email: "Veuillez renseignez votre email (ex: email@email.com)"
 contact.form.country: "Pays (*)"
-contact.placeholder.contry: ""
+contact.placeholder.country: "Select a country"
+contact.form.topic: "Sujet (*)"
+contact.option.contact: "Contacter le webmaster"
+contact.option.astrobin: "Proposer une image Astrobin"
+contact.option.data: "Proposer une nouvelle donnée / modifier une donnée existante"
+contact.option.language: "Proposer une nouvelle langue / corriger une traduction"
+contact.option.other: "Autre"
 contact.form.message: "Message (*)"
 contact.form.submit: "Envoyer"
 contact.mandatory: "(*) Tous les champs sont obligatoire"
