--- a/translations/validators.es.yaml
+++ b/translations/validators.es.yaml
@@ -1,5 +1,7 @@
-contact.constraint.not_blank:
-contact.constraint.email:
-contact.constraint.country:
-contact.constraint.invalid_form:
+contact.constraint.not_blank: Field must not be empty
+contact.constraint.email: Email is not correct
+contact.constraint.email_note_same: Email are not both identical
+contact.constraint.country: Pick a country
+contact.constraint.invalid_form: The form is invalid
+contact.constraint.topic: Please, select a topic
 form.constraint.recaptchat: Recaptcha invalid
