--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -1,5 +1,6 @@
 contact.constraint.not_blank: Veuillez remplir le champ
 contact.constraint.email: Veuillez saisir une adresse email correcte
+contact.constraint.email_note_same: Les adresses emails ne sont pas identiques
 contact.constraint.country: Veuillez saisir un pays
 contact.constraint.invalid_form: Le formulaire n'est pas valide
 contact.constraint.topic: Veuillez sélectionner un sujet
