Contact form fix

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -260,7 +260,7 @@ contact.form.email: "Adresse email (*)"
 contact.form.confirm_email: "Confirmation email (*)"
 contact.placeholder.email: "Veuillez renseignez votre email (ex: email@email.com)"
 contact.form.country: "Pays (*)"
-contact.placeholder.country: "Select a country"
+contact.placeholder.country: "Selectionnez un pays"
 contact.form.topic: "Sujet (*)"
 contact.option.contact: "Contacter le webmaster"
 contact.option.astrobin: "Proposer une image Astrobin"
