--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -45,6 +45,7 @@ dayImage: Image of the day
 info: Informations
 desigs: Other designations
 magnitude: Apparent magnitude
+constellation: Constellation|Constellations
 const_id: Constellation|Constellations
 constId: Constellation|Constellations
 dim: Size
