--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -45,6 +45,7 @@ dayImage: L'image du jour
 info: Informations
 desigs: Autres désignations
 magnitude: Magnitude apparente
+constellation: Constellation|Constellations
 const_id: Constellation|Constellations
 constId: Constellation|Constellations
 dim: Dimension
