--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -30,6 +30,7 @@ catalog.dodz: Dolidze-Dzimselejvil catalog
 catalog.pgc: Catalogue of Principal Galaxies
 catalog.cld: Catálogo Caldwell
 catalog.unassigned: Unassigned
+catalog.ddo: David Dunlap Observatory Catalogue
 # Lang:
 fr: French
 en: English (UK)
