--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -30,6 +30,7 @@ catalog.dodz: Catalogue Dolidze-Dzimselejvili
 catalog.pgc: Catalogue of Principal Galaxies
 catalog.cld: Catalogue de Caldwell
 catalog.unassigned: Non assigné
+catalog.ddo: Catalogue de l'observatoire David Dunlap
 # Lang:
 fr: Français
 en: Anglais (UK)
