--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -30,6 +30,7 @@ catalog.dodz: Dolidze-Dzimselejvil catalog
 catalog.pgc: Catálogo of Principal Galaxies
 catalog.cld: Catálogo Caldwell
 catalog.unassigned: Unassigned
+catalog.ddo: David Dunlap Observatory Catalogue
 # Lang:
 fr: Francês
 en: Inglês (UK)
