Add catalog vdB

--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -31,6 +31,7 @@ catalog.pgc: Catalogue of Principal Galaxies
 catalog.cld: Catálogo Caldwell
 catalog.unassigned: Unassigned
 catalog.ddo: David Dunlap Observatory Catalogue
+catalog.vdb: Catalog van den Bergh
 # Lang:
 fr: French
 en: English (UK)
