--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -31,6 +31,7 @@ catalog.pgc: Catálogo of Principal Galaxies
 catalog.cld: Catálogo Caldwell
 catalog.unassigned: Unassigned
 catalog.ddo: David Dunlap Observatory Catalogue
+catalog.vdb: Catalog van den Bergh
 # Lang:
 fr: Francês
 en: Inglês (UK)
