Fix header + JS skymap

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -11,6 +11,7 @@ hem.zo: Zodiac
 hem.no: Northern hemisphere
 hem.su: Southern hemisphere
 about.us: About us
+skymap: SkyMap
 #Catalog
 catalog: Catalog
 catalogs: Catalogs
