--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -11,6 +11,7 @@ hem.zo: Zodiaque
 hem.no: Hémisphère nord
 hem.su: Hémisphère sud
 about.us: À propos
+skymap: Carte du ciel
 #Catalog
 catalog: Catalogue
 catalogs: Catalogues
