--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -11,6 +11,7 @@ hem.zo: Zodíaco
 hem.no: Hemisfério Norte
 hem.su: Hemisfério sul
 about.us:
+skymap: SkyMap
 #Catalog
 catalog: Catálogo
 catalogs: Catálogos
