--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -12,6 +12,7 @@ hem.no: Hémisphère nord
 hem.su: Hémisphère sud
 about.us: À propos
 skymap: Carte du ciel
+listObservations: Liste des observations
 #Catalog
 catalog: Catalogue
 catalogs: Catalogues
