--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -12,6 +12,7 @@ hem.no: Hemisfério Norte
 hem.su: Hemisfério sul
 about.us:
 skymap: SkyMap
+listObservations: Observations list
 #Catalog
 catalog: Catálogo
 catalogs: Catálogos
