--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -12,6 +12,7 @@ hem.no: Northern hemisphere
 hem.su: Southern hemisphere
 about.us: About us
 skymap: SkyMap
+listObservations: Observations list
 #Catalog
 catalog: Catalog
 catalogs: Catalogs
