--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -64,6 +64,7 @@ ra: Ascension droite
 dec: Déclinaison
 discover: Découvreur
 discoverYear: Année découverte
+galery: Galerie d'images
 # Vue list
 filteringList: Filtrer la liste par constellations, type de catalogues, type d'objets, magnitude...et découvrez les plus beaux objets du ciel.
 list.messier: Liste des objects de Messier
