--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -13,6 +13,10 @@ hem.su: Hémisphère sud
 about.us: À propos
 skymap: Carte du ciel
 listObservations: Liste des observations
+openMenu: Ouverture menu
+switchLang: Changer de langue
+nightMode: Mode nuit ON
+dayMode: Mode nuit OFF
 #Catalog
 catalog: Catalogue
 catalogs: Catalogues
