--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -13,6 +13,10 @@ hem.su: Hemisfério sul
 about.us:
 skymap: SkyMap
 listObservations: Observations list
+openMenu: Open menu
+switchLang: Switch language
+nightMode: Night mode ON
+dayMode: Night mode OFF
 #Catalog
 catalog: Catálogo
 catalogs: Catálogos
