--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,5 +1,5 @@
 # Layout
-dso: Deep-sky objects
+dso: La loutre de l'espace
 dso_tr: Objets du ciel profond
 menu.homepage: Accueil
 selectLang: Langues
