--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -280,3 +280,10 @@ contact.option.other: "Autre"
 contact.form.message: "Message (*)"
 contact.form.submit: "Envoyer"
 contact.mandatory: "(*) Tous les champs sont obligatoire"
+# desc
+constellationListDesc: Liste des constellations du ciel
+dsoListDesc: Catalogue celeste des objets du ciel profonds. Filtrer la liste par constellations, type de catalogues, type d'objets, magnitude...et découvrez les plus beaux objets du ciel.
+listObservationsDesc: ""
+dsoDesc: ""
+contactDesc: Contactez l'administrateur pour n'importe quelle question
+skymapDesc: ""
