--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -13,6 +13,7 @@ hem.su: Southern hemisphere
 about.us: About us
 skymap: SkyMap
 listObservations: Observations list
+locationObservation: Observations location
 openMenu: Open menu
 switchLang: Switch language
 nightMode: Night mode ON
