--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -13,6 +13,7 @@ hem.su: Hemisfério sul
 about.us:
 skymap: SkyMap
 listObservations: Observations list
+locationObservation: Observations location
 openMenu: Open menu
 switchLang: Switch language
 nightMode: Night mode ON
@@ -253,6 +254,7 @@ m101.label: Galáxia Cata-vento
 m102.label: Galáxia do Fuso
 m104.label: Galáxia do Sombreiro
 # Observation : setup page
+
 instrument: Instrument
 diameter: Diameter (mm)
 focal: Focal (mm)
