--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -254,13 +254,13 @@ m101.label: Galáxia Cata-vento
 m102.label: Galáxia do Fuso
 m104.label: Galáxia do Sombreiro
 # Observation : setup page
-
 instrument: Instrument
 diameter: Diameter (mm)
 focal: Focal (mm)
 report: Report (f/D)
 mount: Equatorial mount
 ocular: Ocular|Oculars
+observation.search.placeholder: Search by place, user, name...
 # Form
 select:
   order:
